<resources>
    <string name="app_name">Pig Game</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about">This pig game is made by Xueran Ma.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="win_score_title">Win Score?</string>
    <string name="win_score_summary">Sets the win score option to judge the winner.</string>
    <string-array name="default_win_scores">
        <item >400</item>
        <item >200</item>
        <item >100</item>
        <item >50</item>
        <item >25</item>
    </string-array>
    <string name="default_win_scores_default">100</string>
    <string name="number_of_die_title">Number of Die?</string>
    <string name="number_of_die_summary">Sets the number of die for rolling.</string>
    <string-array name="default_number_of_die">
        <item >1</item>
        <item >2</item>
        <item >3</item>
    </string-array>
    <string name="default_number_of_die_default">1</string>
    <string name="sides_on_a_die_title">Sides on a Die?</string>
    <string name="sides_on_a_die_summary">Sets the sides on a die for rolling.</string>
    <string-array name="default_sides_on_a_die">
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
    </string-array>
    <string name="default_sides_on_a_die_default">6</string>

    <string name="dead_side_title">Dead die side?</string>
    <string name="dead_side_summary">Decide which side ends the turn. (function like 1)</string>
    <string-array name="default_dead_side">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
    </string-array>
    <string name="default_dead_side_default">1</string>
    <string name="instructions">    Pig Game is a dice game with 2 players. Players roll one/two/three dice as
many times as they wish or until they roll a 1(dead side, can be changed). Their score for the turn is the sum of their rolls unless they
get a 1(dead side), then it’s zero. Players keep taking turns rolling until someone gets to 100(win score can be changed). If the player who had
the first roll reaches 100(win score), the second player may still take their turn (so that both players get the same
number of turns). The player with the highest score wins.</string>

</resources>
